--- a/requirements.txt
+++ b/requirements.txt
@@ -2,24 +2,26 @@ tqdm
 ipdb
 pyyaml
 wandb==0.15.0
-flax
-tensorflow-cpu==2.9.0
+flax==0.6.11
+tensorflow-macos>=2.9.0  # TensorFlow 버전은 JAX와 호환되는 안정된 버전을 유지
+tensorflow-metal>=0.6.0
 tensorflow_datasets
-tensorflow_io==0.26.0
+tensorflow-io
 tensorflow_hub
 moviepy
-protobuf==3.20.3
+protobuf==3.20.3  # TensorFlow 및 JAX 호환 버전
 lpips-jax
 ffmpeg-python
 internetarchive
 cloudpickle
 crafter
-jaxlib
+jax==0.4.13  # Metal GPU를 지원하는 JAX 버전
+jaxlib==0.4.13  # Metal GPU 지원
 numpy
-optax
+optax==0.1.3
 rich
-ruamel.yaml
+ruamel.yaml==0.17.21
 tensorflow_probability
 dm_control
-opencv-python
+opencv-python-headless
 gym==0.17.3
