--- a/viper_rl/configs/dreamerv3/configs.yaml
+++ b/viper_rl/configs/dreamerv3/configs.yaml
@@ -26,11 +26,11 @@ defaults:
 
   run:
     script: train
-    steps: 1e10
+    steps: 300000 # 1e10
     expl_until: 0
     log_every: 300
     save_every: 900
-    eval_every: 1e6
+    eval_every: 3000 # 1e6
     eval_initial: True
     eval_eps: 1
     eval_samples: 1
@@ -67,8 +67,8 @@ defaults:
   # Agent
   task_behavior: Greedy
   expl_behavior: None
-  batch_size: 16
-  batch_length: 64
+  batch_size: 8 #16
+  batch_length: 32 #64
   data_loaders: 8
 
   # World Model
