--- a/viper_rl/configs/videogpt/dmc.yaml
+++ b/viper_rl/configs/videogpt/dmc.yaml
@@ -1,8 +1,8 @@
 seed: 1234
 
-batch_size: 64
+batch_size: 1 # 64
 lr: 1.e-4
-total_steps: 800000
+total_steps: 500000
 warmup_steps: 0
 save_interval: 10000
 test_interval: 10000
